apollo-router/tests/integration/snapshots/integration_tests__integration__redis__test__entity_cache.snap
---
source: apollo-router/tests/integration/redis.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it"
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it"
          },
          {
            "body": "I can eat on it"
          }
        ]
      }
    ]
  }
}
