apollo-router/tests/integration/snapshots/integration_tests__integration__redis__test__entity_cache_authorization-3.snap
---
source: apollo-router/tests/integration/redis.rs
expression: response
---
{
  "errors": [
    {
      "message": "Unauthorized field or type",
      "path": [
        "me",
        "name"
      ],
      "extensions": {
        "code": "UNAUTHORIZED_FIELD_OR_TYPE"
      }
    }
  ],
  "data": {
    "me": {
      "id": "1",
      "name": null
    },
    "topProducts": [
      {
        "name": "chair",
        "reviews": [
          {
            "body": "I can sit on it",
            "author": {
              "username": "ada"
            }
          }
        ]
      },
      {
        "name": "table",
        "reviews": [
          {
            "body": "I can sit on it",
            "author": {
              "username": "ada"
            }
          },
          {
            "body": "I can eat on it",
            "author": {
              "username": "charles"
            }
          }
        ]
      }
    ]
  }
}
