apollo-router/tests/integration/snapshots/integration_tests__integration__redis__test__query_planner.snap
---
source: apollo-router/tests/redis_test.rs
expression: query_plan
---
{
  "kind": "Fetch",
  "serviceName": "products",
  "variableUsages": [],
  "operation": "{topProducts{name name2:name}}",
  "operationName": null,
  "operationKind": "query",
  "id": null,
  "inputRewrites": null,
  "outputRewrites": null,
  "schemaAwareHash": "7026c8330d32f98093b2f24fe09aeff9526e19780a595d09c6c440aaf0cbd6c1",
  "authorization": {
    "is_authenticated": false,
    "scopes": [],
    "policies": []
  }
}
